--- a/FactorioWrapper/FactorioWrapper.csproj
+++ b/FactorioWrapper/FactorioWrapper.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="if not exist $(ProjectDir)settings.json (&#xD;&#xA;    copy &quot;$(ProjectDir)settings.template.json&quot; &quot;$(ProjectDir)settings.json&quot;&#xD;&#xA;)" />
+    <Exec Command="if not exist &quot;$(ProjectDir)settings.json&quot; (&#xD;&#xA;    copy &quot;$(ProjectDir)settings.template.json&quot; &quot;$(ProjectDir)settings.json&quot;&#xD;&#xA;)" />
   </Target>
 
 </Project>
