--- a/FactorioWrapper/FactorioWrapper.csproj
+++ b/FactorioWrapper/FactorioWrapper.csproj
@@ -20,15 +20,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="settings.json" />
     <None Remove="settings.template.json" />
     <None Remove="token.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="settings.template.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -49,8 +45,10 @@
     <ProjectReference Include="..\RconSharp\RconSharp.csproj" />
   </ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="if not exist &quot;$(ProjectDir)settings.json&quot; (&#xD;&#xA;    copy &quot;$(ProjectDir)settings.template.json&quot; &quot;$(ProjectDir)settings.json&quot;&#xD;&#xA;)" />
-  </Target>
+  <ItemGroup>
+    <None Update="settings.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
