--- a/FactorioWebInterface/package.json
+++ b/FactorioWebInterface/package.json
@@ -46,15 +46,15 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lodash": "^4.17.21",
-    "mini-css-extract-plugin": "^2.4.5",
+    "mini-css-extract-plugin": "2.6.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "process": "^0.11.10",
     "remove-files-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
@@ -63,7 +63,7 @@
     "typescript": "^4.5.4",
     "typings-for-css-modules-loader": "^1.7.0",
     "util": "^0.12.4",
-    "webpack": "^5.65.0",
+    "webpack": "^5.73.0",
     "webpack-cli": "^4.9.1"
   }
 }
