--- a/FactorioWrapper/Properties/launchSettings.json
+++ b/FactorioWrapper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "FactorioWrapper": {
       "commandName": "Project",
-      "commandLineArgs": "1 /factorio/1/bin/x64/factorio.exe --start-server test_0_17_4.zip --server-settings /factorio/1/server-settings.json --port 34201"
+      "commandLineArgs": "1 /factorio/1/bin/x64/factorio.exe --start-server-load-scenario RedMew --server-settings C:\\factorio\\1\\server-settings.json --port 34201"
     }
   }
 }
